flicker fix trial

--- a/portfolio.css
+++ b/portfolio.css
@@ -18,8 +18,7 @@
 body {
   position: relative;
   font-family: "Gabarito", cursive;
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url(images/starry-sky.jpg) no-repeat center center fixed;
+  background: url(images/starry-sky.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -161,13 +160,6 @@ a {
   grid-auto-rows: minmax(75px, auto);
   gap: 10px;
 }
-/* .card {
-  transition: 0.2s ease-out;
-}
-.card:hover {
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-  transform: translate3d(0, -5px, 0);
-} */
 .about .item {
   display: flex;
   flex-direction: column;
